# open-data-hackathon-2025

./: .env.example  .gitmodules  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/: renovate.json
apps/auth-proxy/: README.md  eslint.config.js  package.json  tsconfig.json
apps/auth-proxy/routes/r/: [...auth].ts
apps/expo/: eslint.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/expo/src/app/: index.tsx
apps/expo/src/utils/: api.tsx
apps/nextjs/: eslint.config.js  next.config.js  package.json  tsconfig.json
apps/nextjs/src/: env.ts
apps/nextjs/src/app/: layout.tsx  page.tsx
apps/nextjs/src/app/_components/: posts.tsx
apps/nextjs/src/trpc/: react.tsx
apps/scheduler/: package.json  tsconfig.json
apps/scheduler/src/: crontab  env.ts  worker.ts
apps/scheduler/src/tasks/: _tasks-list.ts  gen-report.ts  start-report-generation.ts  test.task.ts
apps/scheduler/src/utils/: add-job.ts  create-task.ts  index.ts  start-worker-utils.ts  start-worker.ts
apps/web/: package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: env.ts  middleware.ts
apps/web/src/app/: companies.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/app/_components/: auth-showcase.tsx  (+7 more)
apps/web/src/trpc/: server.ts
python/: cookies.json  pyproject.toml  server.py
scripts/: clean-uztender-data.py  uztender-scrape.ts
tooling/eslint/: package.json
tooling/github/: package.json
tooling/prettier/: index.js
tooling/tailwind/: eslint.config.js  package.json
turbo/generators/: config.ts
turbo/generators/templates/: package.json.hbs
(+6 files in other folders)
